WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298704
[WebM|iOS] VTDecompressionSession is not torn down when app is backgrounded
https://bugs.webkit.org/show_bug.cgi?id=298704
Summary
[WebM|iOS] VTDecompressionSession is not torn down when app is backgrounded
Jean-Yves Avenard [:jya]
Reported
2025-09-11 01:20:10 PDT
bug 298674
but for webm content.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-11 01:20:44 PDT
<
rdar://problem/160353574
>
Jean-Yves Avenard [:jya]
Comment 2
2025-09-11 01:28:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50589
EWS
Comment 3
2025-09-11 04:41:21 PDT
Committed
299850@main
(15ee68a1c156): <
https://commits.webkit.org/299850@main
> Reviewed commits have been landed. Closing PR #50589 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug