[WebM|iOS] VTDecompressionSession is not torn down when app is backgrounded https://bugs.webkit.org/show_bug.cgi?id=298704 rdar://160353574

Reviewed by Youenn Fablet.

We implement the same feature as done for MSE in 299841@main for WebM playback.

* Source/WebCore/platform/graphics/AudioVideoRenderer.h:
(WebCore::TracksRendererManager::applicationWillResignActive):
* Source/WebCore/platform/graphics/avfoundation/AudioVideoRendererAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/AudioVideoRendererAVFObjC.mm:
(WebCore::AudioVideoRendererAVFObjC::applicationWillResignActive):
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
(WebCore::MediaPlayerPrivateWebM::applicationWillResignActive):

Canonical link: https://commits.webkit.org/299850@main